@@ -3,6 +3,7 @@
 -Add: Option to eject CD after ripping has been completed (enabled by default)
 -Add: New space holder for the "meta data" naming mode that contains the source directory
 -Add: Configuration options for cdparanoia
+-Add: icedax ripper plugin
 -Change: Remember last folder for add files/directory/playlist dialogs
 
 2.0.4:
